conceded and let overflowing MathJax cause scrolling. Fixing this is a TODO

--- a/app/src/main/assets/proof.css
+++ b/app/src/main/assets/proof.css
@@ -8,9 +8,9 @@ a{
 }
 html, body {
     max-width: 100%;
-    overflow-x: hidden;
     color: #333333;
-}
+    overflow-x: auto;
+  }
 
 body{
   line-height: 1.3;
@@ -35,4 +35,9 @@ h2, h3, h4, h5, h6{
 }
 h2{
   font-size: 1.6em;
+}
+
+.mw-body{
+  width: 100%;
+  max-width: 100%;
 }
